<resources>
    <string name="app_name">Prueba_TattooAlly</string>
    <string name="title_inicio">Inicio</string>
    <string name="title_explorar">Explorar</string>
    <string name="title_nuevo">Nueva publicación</string>
    <string name="title_chat">Chat</string>
    <string name="title_perfil">Perfil</string>
    <!--splash activity-->
    <string name="login_txt">Iniciar sesión</string>
    <string name="registro_txt">Registrarse</string>
    <!--login activity-->
    <string name="nom_usu_txt">Nombre</string>
    <string name="nom_usu_placeholder">Nombre y Apellidos</string>
    <string name="pass_usu_txt">Contraseña</string>
    <string name="pass_usu_placeholder">***************</string>
    <!--registro activity-->
    <string name="registro_txt_2">Registro</string>
    <string name="nick_txt">Nickname</string>
    <string name="email_txt">Correo electrónico</string>
    <string name="pass_usu_txt_2">Repite la contraseña</string>
    <string name="info_registro">Info</string>
    <string name="alert_registro">Error</string>
    <string name="msg_registro">
        - El nombre tendrá entre 3 y 12 letras sin números \n
        - El nickname tendrá entre 3 y 12 letras \n
        - El correo electrónico deberá tener la siguiente estructura __@__.__ \n
        - La contraseña deberá tener 8 dígitos sólo numérica</string>
    <string name="opcion_aceptar">Vale</string>
    <!--publicacion-->
    <string name="nickname_txt">Nickname</string>
    <string name="categoria_txt">Categoría</string>
    <string name="descripcion_txt">Descripción</string>
    <string name="localizacion_txt">Localización</string>
    <!--nuevo-->
    <string name="anadir_txt">Añadir una foto</string>
    <string name="pie_foto_txt">Añadir descripción</string>
    <string name="publicar_btn">Publicar</string>
    <!--explorar-->
    <string name="busqueda_txt">Buscar</string>
    <string name="categorias_txt">Categorías</string>
    <string name="blackword_txt">Blackwork</string>
    <string name="oldschool_txt">Old School</string>
    <string name="neotradicional_txt">Neotradicional</string>
    <string name="dotwork_txt">Dotwork</string>
    <string name="blkgrey_txt">Black and Grey</string>
    <string name="acuarela_txt">Acuarela</string>
    <string name="japones_txt">Japonés</string>
    <string name="realista_txt">Realista</string>
    <string name="ornamental_txt">Ornamental</string>
    <string name="resultados_txt">Resultados de la búsqueda: </string>
    <!--chat-->
    <string name="error_txt">Funcionalidad aún en proceso de ser implementada</string>
    <string name="chat_txt">Debido a unos problemas de última hora, el chat no podrá ser implementado hasta su
                            próxima versión. \n \n Disculpen las molestias y disfruten del resto de la app :)</string>
    <!--perfil-->
    <string name="publicaciones_txt">0 \n publicaciones</string>
    <string name="seguidores_txt">0 \n seguidores</string>
    <string name="seguidos_txt">0 \n siguiendo</string>
    <string name="editar_perfil_btn">editar perfil</string>
    <!--editar perfil-->
    <string name="editar_txt">Editar perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="msg_modo_oscuro">La funcionalidad del modo oscuro aún no ha sido implementada</string>
    <string name="msg_explorar">Esta funcionalidad aun no está implementada, puedes probar a buscar por estilo de tattoo</string>

    <string-array name="provincias">
        <item></item>
        <item>\u00c1lava</item>
        <item>Albacete</item>
        <item>Alicante</item>
        <item>Almer\u00eda</item>
        <item>\u00c1vila</item>
        <item>Badajoz</item>
        <item>Islas Baleares</item>
        <item>Barcelona</item>
        <item>Burgos</item>
        <item>C\u00e1ceres</item>
        <item>C\u00e1diz</item>
        <item>Cantabria</item>
        <item>Castell\u00f3n</item>
        <item>Ciudad Real</item>
        <item>C\u00f3rdoba</item>
        <item>A Coru\u00f1a </item>
        <item>Cuenca</item>
        <item>Girona</item>
        <item>Granada</item>
        <item>Guadalajara</item>
        <item>Gipuzkoa</item>
        <item>Huelva</item>
        <item>Huesca</item>
        <item>Ja\u00e9n</item>
        <item>Le\u00f3n</item>
        <item>Lleida</item>
        <item>La Rioja </item>
        <item>Lugo</item>
        <item>Madrid</item>
        <item>M\u00e1laga</item>
        <item>Murcia</item>
        <item>Navarra</item>
        <item>Ourense</item>
        <item>Asturias</item>
        <item>Palencia</item>
        <item>Las Palmas</item>
        <item>Pontevedra</item>
        <item>Salamanca</item>
        <item>Santa Cruz de Tenerife</item>
        <item>Segovia</item>
        <item>Sevilla</item>
        <item>Soria</item>
        <item>Tarragona</item>
        <item>Teruel</item>
        <item>Toledo</item>
        <item>Valencia</item>
        <item>Valladolid</item>
        <item>Pa\u00eds Vasco</item>
        <item>Zamora</item>
        <item>Zaragoza</item>
        <item>Ceuta</item>
        <item>Melilla</item>


    </string-array>
    <string-array name="estilos">
        <item></item>
        <item>Blackwork</item>
        <item>OldSchool</item>
        <item>Neotradicional</item>
        <item>Dotwork</item>
        <item>BlackAndGrey</item>
        <item>Acuarela</item>
        <item>Japon\u00e9s</item>
        <item>Realista</item>
        <item>Ornamental</item>
    </string-array>
    
    <string name="ayuda_txt">
         - Inicio. Se mostrarán las publicaciones de aquellos usuarios a los que se siga \n \n
         - Explorar. Se podrán buscar usuarios y publicaciones filtradas por estilo y localización \n \n
         - Nuevo. Se podrá subir una publicación asociada al perfil seleccionando una imagen desde la galería \n \n
         - Chat. Se podrá comunicar con otros usuarios de la plataforma a través de un chat \n \n
         - Perfil. Se podrá ver las publicaciones del propio usuario además de editar los datos del perfil
    </string>
</resources>