<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_inicio">

    <fragment
        android:id="@+id/navigation_inicio"
        android:name="com.example.prueba_tattooally.HomeFragment"
        android:label="@string/title_inicio"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_explorar"
        android:name="com.example.prueba_tattooally.ExplorarActivity"
        android:label="@string/title_explorar"
        tools:layout="@layout/fragment_explorar" />

    <fragment
        android:id="@+id/navigation_nuevo"
        android:name="com.example.prueba_tattooally.NuevoActivity"
        android:label="@string/title_nuevo"
        tools:layout="@layout/fragment_nuevo" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.prueba_tattooally.ChatActivity"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="com.example.prueba_tattooally.PerfilActivity"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_perfil" />
</navigation>