<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.dashboard.DashboardFragment">

    <EditText
        android:id="@+id/busqueda_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:hint="@string/busqueda_txt"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/categorias_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="@string/categorias_txt"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/blackwork_btn"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/blackword_txt" />

        <Button
            android:id="@+id/oldschool_btn"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/oldschool_txt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/neotrad_btn"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.7"
            android:text="@string/neotradicional_txt" />

        <Button
            android:id="@+id/dotwork_btn"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginStart="5dp"
            android:layout_weight="2"
            android:text="@string/dotwork_txt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/blkgrey_btn"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.8"
            android:text="@string/blkgrey_txt" />

        <Button
            android:id="@+id/acuarela_btn"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginStart="5dp"
            android:layout_weight="2"
            android:text="@string/acuarela_txt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/japo_btn"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/japones_txt" />

        <Button
            android:id="@+id/real_btn"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/realista_txt" />
    </LinearLayout>

    <Button
        android:id="@+id/orna_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:text="@string/ornamental_txt" />
</LinearLayout>