<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/back" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/tattooally_sin_eslogan" />

    <TextView
        android:id="@+id/inicio_sesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/registro_txt_2"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/nombre_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/nom_usu_txt"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/loginNickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:fontFamily="@font/comfortaa"
                android:hint="@string/nom_usu_placeholder"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/nick_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/nick_txt"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/nick_edittxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:fontFamily="@font/comfortaa"
                android:hint="@string/nick_txt"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/email_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/email_txt"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/email_edittxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:fontFamily="@font/comfortaa"
                android:hint="@string/email_txt"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/pass_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/pass_usu_txt"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/pass_edittxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:fontFamily="@font/comfortaa"
                android:hint="@string/pass_usu_placeholder"
                android:inputType="textPassword"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/pass_txt_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/pass_usu_txt_2"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/pass_edittxt_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:fontFamily="@font/comfortaa"
                android:hint="@string/pass_usu_placeholder"
                android:inputType="textPassword"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/registro_btn"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="#C4C4C4"
                android:fontFamily="@font/comfortaa"
                android:text="@string/registro_txt"
                android:textColor="@color/black" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>