<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/back" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/tattooally_sin_eslogan" />

    <TextView
        android:id="@+id/inicio_sesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/login_txt"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nombre_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/nom_usu_txt"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/loginNickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/nom_usu_placeholder"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/nick_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/pass_usu_txt"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/nick_edittxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/pass_usu_placeholder"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="16sp" />

    <Button
        android:id="@+id/inicio_btn"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:backgroundTint="#C4C4C4"
        android:fontFamily="@font/comfortaa"
        android:text="@string/login_txt"
        android:textColor="@color/black" />

</LinearLayout>